# lords-neural-nets

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  style.txt  toolchain-arm.cmake  toolchain-x86.cmake
acts2ppm/: CMakeLists.txt  acts2ppm.c
bench/: CMakeLists.txt  bench.c  bench_utils.c  bench_utils.h  matmul_bench.c  matmul_bench_results.txt  mnist_bench.c  mnist_bench_results.txt  muladd_fp32.S  muladd_fp32_64_bench.c  muladd_fp64.S  xor_bench.c  xor_bench_results.txt
examples/: CMakeLists.txt  mnist.c  mnist_double.c  xor.c  xor_double.c  xor_float.c
just_build_all/: CMakeLists.txt  proxy.c
lib/: CMakeLists.txt  activations.c  activations.h  cost.c  cost.h  dataset.c  dataset.h  functions.c  functions.h  layer.c  layer.h  matrix.c  matrix.h  metrics.h  network.c  network.h  train_log_opts.h  train_opts.h  utils.c  utils.h
test/: CMakeLists.txt  test.c  test.h  test_functions.c  test_layer.c  test_matrix.c  test_network.c  test_train.c  test_train_mnist.c  test_train_xor.c  test_utils.c  utils.c  utils.h
